--- a/ProMgt.Client/Components/Skeleton/DashboardSkeleton.razor
+++ b/ProMgt.Client/Components/Skeleton/DashboardSkeleton.razor
@@ -10,7 +10,7 @@
             <MudSkeleton Width="200px" Height="24px" Class="mb-2" />
             <MudSkeleton Width="300px" Height="32px" Class="mb-4" />
 
-            <MudPaper Outlined="true" Elevation="0" Class="pa-4 rounded-lg d-flex gap-8">
+            <MudPaper Outlined="true" Elevation="0" Class="pa-4 rounded-xl d-flex gap-8">
                 @for (int i = 0; i < 3; i++)
                 {
                     <div class="d-flex flex-column align-center">
@@ -22,14 +22,14 @@
         </MudItem>
 
         <MudItem xs="12" md="6">
-            <MudPaper Outlined="true" Elevation="0" Class="pa-8 rounded-lg d-flex flex-column align-center">
+            <MudPaper Outlined="true" Elevation="0" Class="pa-8 rounded-xl d-flex flex-column align-center">
                 <MudSkeleton SkeletonType="SkeletonType.Circle" Width="300px" Height="300px" />
                 <MudSkeleton Width="200px" Height="24px" Class="mb-4" />
             </MudPaper>
         </MudItem>
 
         <MudItem xs="12" md="6">
-            <MudPaper Outlined="true" Elevation="0" Class="pa-8 rounded-lg d-flex flex-column align-center">
+            <MudPaper Outlined="true" Elevation="0" Class="pa-8 rounded-xl d-flex flex-column align-center">
                 <MudSkeleton SkeletonType="SkeletonType.Circle" Width="300px" Height="300px" />
                 <MudSkeleton Width="200px" Height="24px" Class="mb-4" />
             </MudPaper>
@@ -38,7 +38,7 @@
 
     <MudGrid Style="max-width: 1200px;justify-self: center;">
         <MudItem xs="12" md="6">
-            <MudPaper Outlined="true" Elevation="0" Class="pa-8 rounded-lg">
+            <MudPaper Outlined="true" Elevation="0" Class="pa-8 rounded-xl">
                 <MudSkeleton Width="120px" Height="24px" Class="mb-4" />
                 <div class="d-flex gap-4">
                     @for (int i = 0; i < 2; i++)
@@ -55,7 +55,7 @@
         </MudItem>
 
         <MudItem xs="12" md="6">
-            <MudSkeleton Height="168px" Width="168px" Class="rounded-lg" />
+            <MudSkeleton Height="168px" Width="168px" Class="rounded-xl" />
         </MudItem>
     </MudGrid>
 
