--- a/ProMgt.Client/Components/Skeleton/TaskDashboardSkeleton.razor
+++ b/ProMgt.Client/Components/Skeleton/TaskDashboardSkeleton.razor
@@ -4,7 +4,7 @@
             @for (int i = 0; i < 3; i++)
             {
                 <MudItem xs="12" md="3">
-                    <MudPaper Outlined="true" Class="mud-width-full rounded-lg statistics pa-4 d-flex align-center flex-column">
+                    <MudPaper Outlined="true" Class="mud-width-full rounded-xl statistics pa-4 d-flex align-center flex-column">
                         <MudSkeleton Width="120px" Height="20px" />
                         <MudItem class="py-2">
                             <MudSkeleton Width="80px" Height="40px" />
@@ -19,7 +19,7 @@
     <MudItem Class="mt-6">
         <MudGrid>
             <MudItem xs="12" lg="6">
-                <MudPaper Outlined="true" Class="mud-width-full d-flex flex-row rounded-lg pa-4">
+                <MudPaper Outlined="true" Class="mud-width-full d-flex flex-row rounded-xl pa-4">
                     <MudItem Class="chart-title pb-8">
                         <MudSkeleton Width="200px" Height="24px" />
                     </MudItem>                    
@@ -27,7 +27,7 @@
                 </MudPaper>
             </MudItem>
             <MudItem xs="12" lg="6">
-                <MudPaper Outlined="true" Class="mud-width-full d-flex flex-row rounded-lg pa-4">
+                <MudPaper Outlined="true" Class="mud-width-full d-flex flex-row rounded-xl pa-4">
                     <MudItem Class="chart-title pb-8">
                         <MudSkeleton Width="200px" Height="24px" />
                     </MudItem>
@@ -40,7 +40,7 @@
     <MudItem Class="mt-6">
         <MudGrid>
             <MudItem xs="12" lg="6">
-                <MudPaper Outlined="true" Class="mud-width-full d-flex flex-row rounded-lg pa-4">
+                <MudPaper Outlined="true" Class="mud-width-full d-flex flex-row rounded-xl pa-4">
                     <MudItem Class="chart-title pb-8">
                         <MudSkeleton Width="200px" Height="24px" />
                     </MudItem>
@@ -48,7 +48,7 @@
                 </MudPaper>
             </MudItem>
             <MudItem xs="12" lg="6">
-                <MudPaper Outlined="true" Class="mud-width-full d-flex flex-row rounded-lg pa-4">
+                <MudPaper Outlined="true" Class="mud-width-full d-flex flex-row rounded-xl pa-4">
                     <MudItem Class="chart-title pb-8">
                         <MudSkeleton Width="200px" Height="24px" />
                     </MudItem>
