--- a/ProMgt.Client/Components/Skeleton/TaskOverviewSkeleton.razor
+++ b/ProMgt.Client/Components/Skeleton/TaskOverviewSkeleton.razor
@@ -7,7 +7,7 @@
         </MudItem>
 
         <MudItem xs="12" md="6">
-            <MudPaper Outlined="true" Class="mud-width-full rounded-lg pa-8">
+            <MudPaper Outlined="true" Class="mud-width-full rounded-xl pa-8">
                 <MudItem Class="chart-title pb-1">
                     <MudSkeleton Width="80px" Height="24px" />
                 </MudItem>
@@ -37,7 +37,7 @@
         <MudItem xs="12" md="6">
             <MudGrid>
                 <MudItem xs="12">
-                    <MudPaper Outlined="true" Class="mud-width-full rounded-lg pa-8">
+                    <MudPaper Outlined="true" Class="mud-width-full rounded-xl pa-8">
                         <MudItem Class="chart-title pb-8">
                             <MudSkeleton Width="200px" Height="24px" />
                         </MudItem>
