--- a/ProMgt.Client/Layout/NavMenu.razor
+++ b/ProMgt.Client/Layout/NavMenu.razor
@@ -73,6 +73,7 @@
         }
         ProjectService.OnNewProjectAddedChanged += UpdateProjectList;
         ProjectService.OnProjectNameUpdated += UpdateProjectList; // Add this line
+        ProjectService.OnProjectDeleted += UpdateProjectList;
 
     }
 
