--- a/ProMgt.Client/Components/Dialogs/CreateProjectDialog.razor
+++ b/ProMgt.Client/Components/Dialogs/CreateProjectDialog.razor
@@ -1,5 +1,6 @@
 ﻿@using FluentValidation
 @using System.ComponentModel.DataAnnotations
+
 <EditForm Model="@ProjectForm" OnValidSubmit="Submit" OnInvalidSubmit="HandleInvalidSubmit">
     <DataAnnotationsValidator />
     @if (ShowMudPaper)
@@ -11,26 +12,41 @@
         </MudPaper>
     }
     <MudDialog Class="fullscreen-dialog">
-        <TitleContent>
-            Create a new project
-        </TitleContent>
         <DialogContent>
-            <MudItem Class="mb-4">
-                <MudTextField T="string" Immediate="false"
-                              Label="Project name"
-                              RequiredError="User name is required!"
-                              For="@(()=>ProjectForm.Name)"
-                              @bind-Value="ProjectForm.Name" />
-            </MudItem>
-            <MudItem Class="mb-4">
-                <MudDatePicker Label="Project end date"                               
-                               For="@(()=>ProjectForm.DeadLine)"
-                               @bind-Date="ProjectForm.DeadLine" />
-            </MudItem>
+            <MudContainer Style="align-items: center;display: flex;min-height: 85vh;border: 0px solid black;">
+                <MudGrid Justify="Justify.Center">
+                    <MudPaper Outlined="true" Class="rounded-xl" style="min-height: 50vh; min-width: 50vw;">
+                        <MudItem Class="pa-8" xs="12">
+                            <MudText Typo="Typo.h4">
+                                Create a new project
+                            </MudText>
+                        </MudItem>
+                        <MudDivider />
+                        <MudItem Class="mb-4 pa-8" xs="12">
+                            <MudTextField T="string" Immediate="false"
+                                          Label="Project name"
+                                          Variant="Variant.Outlined"
+                                          RequiredError="User name is required!"
+                                          For="@(()=>ProjectForm.Name)"
+                                          @bind-Value="ProjectForm.Name" />
+                        </MudItem>
+
+                        <MudItem Class="mb-4 pa-8">
+                            <MudDatePicker Label="Project end date"
+                                           Variant="Variant.Outlined"
+                                           For="@(()=>ProjectForm.DeadLine)"
+                                           @bind-Date="ProjectForm.DeadLine" />
+                        </MudItem>
+                        <MudSpacer/>
+                        <MudItem Class="pa-8 display-flex justify-end" xs="12">
+                            <MudButton OnClick="Cancel">Cancel</MudButton>
+                            <MudButton Variant="Variant.Outlined" Color="Color.Primary" ButtonType="ButtonType.Submit">Create</MudButton>
+                        </MudItem>
+                    </MudPaper>
+                </MudGrid>
+            </MudContainer>
         </DialogContent>
         <DialogActions>
-            <MudButton OnClick="Cancel">Cancel</MudButton>
-            <MudButton Variant="Variant.Outlined" Color="Color.Primary" ButtonType="ButtonType.Submit">Create</MudButton>
         </DialogActions>
     </MudDialog>
 </EditForm>
@@ -43,6 +59,7 @@
         max-height: 100vh;
         transition: all 0.5s ease-in-out;
     }
+
     .custom-chip {
         width: 100px; /* Set your desired width */
     }
@@ -77,7 +94,7 @@
         {
             await Task.CompletedTask;
             MudDialog!.Close(DialogResult.Ok(ProjectForm));
-        }    
+        }
 
     }
 
